# ai_exec

ai-executive-studio/: .env.example  Makefile  README.md  demo.sh  docker-compose.yml
ai-executive-studio/infra/minio/: README.md
ai-executive-studio/infra/postgres/: init.sql
ai-executive-studio/infra/prometheus/: prometheus.yml
ai-executive-studio/infra/qdrant/: config.yaml
ai-executive-studio/scripts/: seed.sh
ai-executive-studio/services/alignment/: Dockerfile  README.md  pyproject.toml
ai-executive-studio/services/assets/: README.md
ai-executive-studio/services/avatar_sadtalker/: README.md  pyproject.toml
ai-executive-studio/services/compositor/: Dockerfile  README.md  (+1 more)
ai-executive-studio/services/lipsync_wav2lip/: Dockerfile  README.md  pyproject.toml
ai-executive-studio/services/lipsync_wav2lip/app/: main.py
ai-executive-studio/services/lipsync_wav2lip/app/services/: wav2lip.py
ai-executive-studio/services/lipsync_wav2lip/tests/: test_lipsync.py
ai-executive-studio/services/orchestrator/: Dockerfile  README.md  pyproject.toml
ai-executive-studio/services/orchestrator/app/: main.py
ai-executive-studio/services/orchestrator/app/api/: routes.py
ai-executive-studio/services/orchestrator/app/core/: auth.py  config.py  logging.py  telemetry.py
ai-executive-studio/services/orchestrator/app/models/: schemas.py
ai-executive-studio/services/orchestrator/app/services/: agent.py  policy.py  store.py
ai-executive-studio/services/orchestrator/config/: policies.yaml
ai-executive-studio/services/orchestrator/tests/: test_routes.py
ai-executive-studio/services/orchestrator/tools/: seed_policy.py
ai-executive-studio/services/pds_ops_api/: Dockerfile  README.md  pyproject.toml
ai-executive-studio/services/pds_ops_api/app/: main.py
ai-executive-studio/services/pds_ops_api/app/adapters/: importers.py  seed.py
ai-executive-studio/services/pds_ops_api/app/api/: dependencies.py  routes.py
ai-executive-studio/services/pds_ops_api/app/db/: database.py
ai-executive-studio/services/pds_ops_api/app/engine/: analytics.py  recommendations.py
ai-executive-studio/services/pds_ops_api/app/models/: models.py
ai-executive-studio/services/pds_ops_api/app/schemas/: schemas.py
ai-executive-studio/services/pds_ops_api/app/scripts/: seed.py
ai-executive-studio/services/pds_ops_api/data/: clients.json  projects.csv  projects.json  resources.json  risks.json
ai-executive-studio/services/pds_ops_api/tests/: test_engine.py
ai-executive-studio/ui-admin/: Dockerfile  angular.json  package.json  tsconfig.json
ai-executive-studio/ui-web/: Dockerfile  index.html  package.json
(+66 files in other folders)
