[project]
name = "pds-ops-api"
version = "0.1.0"
description = "AI Executive (PDS Ops) backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.0",
  "pyodbc>=5.0.0"
]

[project.optional-dependencies]
 dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.3.0",
  "black>=24.2.0"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["app"]
